--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,4 +1,5 @@
 @use '../../styles/vars';
+@import url("https://fonts.googleapis.com/css2?family=Castoro&display=swap");
 
 .nav {
     background: linear-gradient(rgb(189, 177, 177), white);
@@ -7,6 +8,7 @@
     margin: vars.$gutter;
     &__item {
       font-size: 1.7em;
+      font-family: 'Castoro', sans-serif;
     }
 }
 
