ajout composants Houses et composants Gryffindor/Slytherin avec reducer, axios, middlewares...etc WIP

--- a/src/components/Characters/Gryffindor/gryffindor.scss
+++ b/src/components/Characters/Gryffindor/gryffindor.scss
@@ -1,7 +1,7 @@
-@use '../../styles/vars';
+@use '../../../styles/vars';
 @import url("https://fonts.googleapis.com/css2?family=Castoro&display=swap");
 
-.mainCharacters {
+.gryffindor {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
