--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -8,7 +8,12 @@
     &__item {
       font-size: 1.7em;
       font-family: 'Castoro', sans-serif;
+      display: block;
     }
+}
+
+#basic-nav-dropdown {
+  color: black;
 }
 
 
