--- a/src/components/Houses/houses.scss
+++ b/src/components/Houses/houses.scss
@@ -1,38 +1,31 @@
 @use '../../styles/vars';
 @import url("https://fonts.googleapis.com/css2?family=Castoro&display=swap");
 
-.mainCharacters {
+.houses {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-wrap : wrap;
+  justify-content: space-between;
 
   &__card {
     background: linear-gradient(rgb(189, 177, 177), white);
-    margin: vars.$gutter;
-    text-align: center;
-    border: none;
-    border-radius: 30px;
     font-family: 'Castoro', sans-serif;
+    text-align: center;
+    border-radius: 30px;
+    margin: vars.$gutter;
+    border: none;
+
     &__title {
       font-weight: bold;
       font-size: 1.5em;
     }
-    &__content {
-      font-size: 1.2em;
 
-      &__span {
+    &__content {
+      font-size: 1.4em;
+
+      &__span{
         text-decoration: underline;
+        display:block;
       }
     }
-    &__image{
-      width: 15rem;
-      margin: auto;
-      border-radius: 30px;
-    }
   }
-}
-
-.loading {
-  font-size: 3em;
-  font-family: 'Castoro', sans-serif;
 }
