--- a/src/components/Characters/Slytherin/slytherin.scss
+++ b/src/components/Characters/Slytherin/slytherin.scss
@@ -7,7 +7,7 @@
   justify-content: center;
 
   &__card {
-    background: linear-gradient(rgb(189, 177, 177), white);
+    background-image: url(../../../assets/images/slytherin.jpg);
     margin: vars.$gutter;
     text-align: center;
     border: none;
@@ -16,18 +16,21 @@
     &__title {
       font-weight: bold;
       font-size: 1.5em;
+      padding: 0.2em;
+      border-radius: 30px;
+      color: black;
+      background-color: white;
     }
     &__content {
       font-size: 1.2em;
+      padding: 0.2em;
+      border-radius: 30px;
+      color: black;
+      background-color: white;
 
       &__span {
         text-decoration: underline;
       }
-    }
-    &__image{
-      width: 15rem;
-      margin: auto;
-      border-radius: 30px;
     }
   }
 }
@@ -36,3 +39,10 @@
   font-size: 3em;
   font-family: 'Castoro', sans-serif;
 }
+
+.card-img-top {
+  width: 100%;
+  height: 60vh;
+  object-fit: cover;
+  padding: 2em;
+  }
