--- a/src/components/Characters/Slytherin/slytherin.scss
+++ b/src/components/Characters/Slytherin/slytherin.scss
@@ -1,6 +1,13 @@
 @use '../../../styles/vars';
 @import url("https://fonts.googleapis.com/css2?family=Castoro&display=swap");
 
+.title {
+  text-align : center;
+  text-transform: uppercase;
+  font-family: 'Castoro', sans-serif;
+  font-size: 3em;
+}
+
 .slytherin {
   display: flex;
   flex-wrap: wrap;
